--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<h1 align="center">Hi there, I'm <a href="https://vk.com/dianka_alex" target="_blank">Diana</a> 
+<!DOCTYPE html>
+<html>
+<body>
+
+<p>My family and I visited The Epcot center this summer.</p>
+
+<aside>
+  <h4>Epcot Center</h4>
+  <p>The Epcot Center is a theme park in Disney World, Florida.</p>
+</aside>
+
+</body>
+</html>
