--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US>
+<head>            
 <body>
 
 <p>My family and I visited The Epcot center this summer.</p>
@@ -9,3 +10,5 @@
   <p>The Epcot Center is a theme park in Disney World, Florida.</p>
 </aside>
 
+</body>
+</html>
